# lox

./: Cargo.toml  clippy.toml  flake.nix  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
